--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -2,10 +2,11 @@
   // These tasks will run in order when initializing your CodeSandbox project.
   "setupTasks": [
     {
-      "name": "Installing Dependencies",
-      "command": "npm install"
+      "command": "npm install",
+      "name": "Installing Dependencies"
     }
   ],
+
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "test": {
